--- a/promtail-config.yaml
+++ b/promtail-config.yaml
@@ -17,4 +17,4 @@ scrape_configs:
           job: docker
           __path__: /var/lib/docker/containers/*/*.log
           __docker_container_name__: "{{ .ContainerName }}"
-          __service__: "{{ .ContainerName | replace "-" "_" }}"  # Use the container name as the service label, replacing dashes with underscores
+          __service__: "{{ .ContainerName }}"  # Adding a service label based on the container name
